fix header z-index

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -9,5 +9,6 @@
         display: flex;
         align-items: center;
         padding: 0 1.2rem;
+        z-index: 999;
     }
 }
